--- a/package.json
+++ b/package.json
@@ -4,11 +4,43 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "build": "astro build && pagefind --site dist",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.14.1"
+    "@ascorbic/bluesky-loader": "^0.1.0",
+    "@astrojs/mdx": "^4.3.6",
+    "@astrojs/partytown": "^2.1.4",
+    "@astrojs/react": "^4.4.0",
+    "@astrojs/sitemap": "^3.6.0",
+    "@icons-pack/react-simple-icons": "^13.8.0",
+    "@misskey-dev/summaly": "^5.2.4",
+    "@pagefind/default-ui": "^1.4.0",
+    "@playform/compress": "^0.2.0",
+    "@tailwindcss/vite": "^4.1.14",
+    "astro": "^5.14.1",
+    "astro-compressor": "^1.1.2",
+    "astro-expressive-code": "^0.41.3",
+    "astro-matomo": "^1.9.0",
+    "astro-seo": "^0.8.4",
+    "astro-typewriter": "^1.1.0",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.544.0",
+    "mfm-js": "^0.25.0",
+    "pagefind": "^1.4.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "rehype-slug": "^6.0.0",
+    "rehype-toc": "^3.0.2",
+    "remark-link-card-plus": "^0.7.1",
+    "sharp": "^0.34.4",
+    "tailwindcss": "^4.1.14"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/js-cookie": "^3.0.6",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1"
   }
 }
