--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,10 +5,6 @@ on:
     branches: [ master ]
   workflow_dispatch:
 
-env:
-  PUBLIC_MATOMO_URL: https://rp1.amase.cc/matomo/
-  PUBLIC_MATOMO_SITE_ID: 1
-
 permissions:
   contents: read
   pages: write
@@ -18,6 +14,9 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+     PUBLIC_MATOMO_URL: ${{ vars.PUBLIC_MATOMO_URL }}
+     PUBLIC_MATOMO_SITE_ID: ${{ vars.PUBLIC_MATOMO_SITE_ID }}
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
@@ -27,8 +26,10 @@ jobs:
         with:
           path: cache
           key: Images-${{ runner.os }}
+          
       - name: Install, build, and upload your site
         uses: withastro/action@v3
+        
       - name: Install gh actions-cache extension
         run: gh extension install actions/gh-actions-cache
         env:
