--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
      PUBLIC_MATOMO_URL: ${{ vars.PUBLIC_MATOMO_URL }}
      PUBLIC_MATOMO_SITE_ID: ${{ vars.PUBLIC_MATOMO_SITE_ID }}
      MK_SUMMALY_PROXY: ${{ secrets.MK_SUMMALY_PROXY }}
+     PINNED_HOST: ${{ secrets.PINNED_HOST }}
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
