--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@ascorbic/bluesky-loader": "^0.1.0",
     "@astrojs/mdx": "^4.3.6",
     "@astrojs/partytown": "^2.1.4",
-    "@astrojs/react": "^4.4.0",
     "@astrojs/rss": "^4.0.13",
     "@astrojs/sitemap": "^3.6.0",
+    "@iconify-json/lucide": "^1.2.80",
+    "@iconify-json/simple-icons": "^1.2.62",
     "@icons-pack/react-simple-icons": "^13.8.0",
     "@iframe-resizer/parent": "^5.5.7",
     "@misskey-dev/summaly": "^5.2.4",
@@ -27,16 +28,14 @@
     "astro": "^5.14.1",
     "astro-compressor": "^1.1.2",
     "astro-expressive-code": "^0.41.3",
+    "astro-icon": "^1.1.5",
     "astro-matomo": "^1.9.0",
     "astro-seo": "^0.8.4",
     "astro-typewriter": "^1.1.0",
-    "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
     "markdown-it": "^14.1.0",
     "mfm-js": "^0.25.0",
     "pagefind": "^1.4.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "rehype-external-links": "^3.0.0",
     "rehype-slug": "^6.0.0",
     "rehype-toc": "^3.0.2",
